my-debugging-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-debugging-pod
spec:
  containers:
  - name: nginx-container
    image: nginx
