my-dpvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-dpvc-pod
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - mountPath: "/data/dpvc"
        name: dynamic-pvc
  volumes:
    - name: dynamic-pvc
      persistentVolumeClaim:
        claimName: my-dynamic-pvc-100
