my-dynamic-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-dynamic-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-statefulset
  template:
    metadata:
      labels:
        app: my-statefulset
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: dynamic-volume
          mountPath: /tmp/dynamic
  volumeClaimTemplates:
  - metadata:
      name: dynamic-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-storage"
      resources:
        requests:
          storage: 100Gi
