my-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-test-pod
spec:
  containers:
  - name: my-container
    image: busybox
    command: ["sh","-c","sleep 1000"]
