my-localhost-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-localhost-pod
spec:
  containers:
  - name: nginx-container
    image: nginx
  - name: another-container
    image: curlimages/curl
    command: ["sh","-c","sleep 1000"]
