my-pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pv-pod
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - mountPath: "/data/pv"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: my-pvc-100
