my-pv-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pv-pod2
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - mountPath: "/tmp/logs"
        name: log
  volumes:
    - name: log
      persistentVolumeClaim:
        claimName: my-pvc2
