my-simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-simple-pod
spec:
  containers:
  - name: my-container
    image: ubuntu:23.10
    command: ["sh","-c","sleep 1000"]
