my-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  namespace: my-namespace
  labels:
    app: my-app
spec:
  containers:
  - name: nginx-container
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-caller-pod
  namespace: caller-namespace
  labels:
    app: caller-pod
spec:
  containers:
  - name: nginx-container
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  namespace: another-namespace
  labels:
    app: my-app
spec:
  containers:
  - name: nginx-container
    image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-namespace
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: another-namespace
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
